# picoI2c

./: CMakeLists.txt  LPS25HB.c  LPS25HB.h  picoI2c.c
